Update build and test.yml

--- a/.github/workflows/build and test.yml
+++ b/.github/workflows/build and test.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Install docker-compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
       - name: Deploy backend with docker-compose
         working-directory: backend
         run: |
