--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "backend": "file:",
+    "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
+    "pino": "^9.5.0",
+    "pino-http": "^10.2.0",
     "redis": "^4.7.0"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^3.0.4",
+    "pino-pretty": "^11.3.0",
     "vitest": "^3.0.4"
   }
 }
