--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "chart.js": "^4.4.7",
     "frontend": "file:",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
