--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,18 @@
     "frontend": "file:",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "qrcode": "^1.5.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "qrcode": "^1.5.4"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.22",
     "jsdom": "^26.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "vite": "^5.4.11",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5"
